--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.4",
+        "bootstrap": "^5.3.6",
         "leaflet": "^1.9.4",
         "vue": "^3.5.14",
         "vue-loader": "^17.3.1",
